// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginPage should match the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LoginPage />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="login-site-title"
        >
          <div
            className="login-logo-box"
          >
            <ReactComponent
              className="login-logo"
            />
          </div>
          <h1
            className="login-title"
          >
            <span
              className="login-big-g"
            >
              G
            </span>
            it
            <span
              className="login-big-g"
            >
              G
            </span>
            ames
          </h1>
        </div>,
        <div
          className="login-search-form"
        >
          <Connect(SearchInput) />
        </div>,
      ],
      "className": "login-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="login-logo-box"
            >
              <ReactComponent
                className="login-logo"
              />
            </div>,
            <h1
              className="login-title"
            >
              <span
                className="login-big-g"
              >
                G
              </span>
              it
              <span
                className="login-big-g"
              >
                G
              </span>
              ames
            </h1>,
          ],
          "className": "login-site-title",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <ReactComponent
                className="login-logo"
              />,
              "className": "login-logo-box",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "className": "login-logo",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span
                  className="login-big-g"
                >
                  G
                </span>,
                "it",
                <span
                  className="login-big-g"
                >
                  G
                </span>,
                "ames",
              ],
              "className": "login-title",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "G",
                  "className": "login-big-g",
                },
                "ref": null,
                "rendered": "G",
                "type": "span",
              },
              "it",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "G",
                  "className": "login-big-g",
                },
                "ref": null,
                "rendered": "G",
                "type": "span",
              },
              "ames",
            ],
            "type": "h1",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Connect(SearchInput) />,
          "className": "login-search-form",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="login-site-title"
          >
            <div
              className="login-logo-box"
            >
              <ReactComponent
                className="login-logo"
              />
            </div>
            <h1
              className="login-title"
            >
              <span
                className="login-big-g"
              >
                G
              </span>
              it
              <span
                className="login-big-g"
              >
                G
              </span>
              ames
            </h1>
          </div>,
          <div
            className="login-search-form"
          >
            <Connect(SearchInput) />
          </div>,
        ],
        "className": "login-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="login-logo-box"
              >
                <ReactComponent
                  className="login-logo"
                />
              </div>,
              <h1
                className="login-title"
              >
                <span
                  className="login-big-g"
                >
                  G
                </span>
                it
                <span
                  className="login-big-g"
                >
                  G
                </span>
                ames
              </h1>,
            ],
            "className": "login-site-title",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <ReactComponent
                  className="login-logo"
                />,
                "className": "login-logo-box",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "className": "login-logo",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="login-big-g"
                  >
                    G
                  </span>,
                  "it",
                  <span
                    className="login-big-g"
                  >
                    G
                  </span>,
                  "ames",
                ],
                "className": "login-title",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "G",
                    "className": "login-big-g",
                  },
                  "ref": null,
                  "rendered": "G",
                  "type": "span",
                },
                "it",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "G",
                    "className": "login-big-g",
                  },
                  "ref": null,
                  "rendered": "G",
                  "type": "span",
                },
                "ames",
              ],
              "type": "h1",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Connect(SearchInput) />,
            "className": "login-search-form",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`LoginPage should match the snapshot 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LoginPage
    pageNotFound={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="login-site-title"
        >
          <div
            className="login-logo-box"
          >
            <ReactComponent
              className="login-logo"
            />
          </div>
          <h1
            className="login-title"
          >
            <span
              className="login-big-g"
            >
              G
            </span>
            it
            <span
              className="login-big-g"
            >
              G
            </span>
            ames
          </h1>
        </div>,
        <div
          className="login-search-form"
        >
          <Connect(SearchInput) />
        </div>,
      ],
      "className": "login-container",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="login-logo-box"
            >
              <ReactComponent
                className="login-logo"
              />
            </div>,
            <h1
              className="login-title"
            >
              <span
                className="login-big-g"
              >
                G
              </span>
              it
              <span
                className="login-big-g"
              >
                G
              </span>
              ames
            </h1>,
          ],
          "className": "login-site-title",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <ReactComponent
                className="login-logo"
              />,
              "className": "login-logo-box",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "className": "login-logo",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <span
                  className="login-big-g"
                >
                  G
                </span>,
                "it",
                <span
                  className="login-big-g"
                >
                  G
                </span>,
                "ames",
              ],
              "className": "login-title",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "G",
                  "className": "login-big-g",
                },
                "ref": null,
                "rendered": "G",
                "type": "span",
              },
              "it",
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "G",
                  "className": "login-big-g",
                },
                "ref": null,
                "rendered": "G",
                "type": "span",
              },
              "ames",
            ],
            "type": "h1",
          },
        ],
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Connect(SearchInput) />,
          "className": "login-search-form",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="login-site-title"
          >
            <div
              className="login-logo-box"
            >
              <ReactComponent
                className="login-logo"
              />
            </div>
            <h1
              className="login-title"
            >
              <span
                className="login-big-g"
              >
                G
              </span>
              it
              <span
                className="login-big-g"
              >
                G
              </span>
              ames
            </h1>
          </div>,
          <div
            className="login-search-form"
          >
            <Connect(SearchInput) />
          </div>,
        ],
        "className": "login-container",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="login-logo-box"
              >
                <ReactComponent
                  className="login-logo"
                />
              </div>,
              <h1
                className="login-title"
              >
                <span
                  className="login-big-g"
                >
                  G
                </span>
                it
                <span
                  className="login-big-g"
                >
                  G
                </span>
                ames
              </h1>,
            ],
            "className": "login-site-title",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <ReactComponent
                  className="login-logo"
                />,
                "className": "login-logo-box",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "className": "login-logo",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <span
                    className="login-big-g"
                  >
                    G
                  </span>,
                  "it",
                  <span
                    className="login-big-g"
                  >
                    G
                  </span>,
                  "ames",
                ],
                "className": "login-title",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "G",
                    "className": "login-big-g",
                  },
                  "ref": null,
                  "rendered": "G",
                  "type": "span",
                },
                "it",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "G",
                    "className": "login-big-g",
                  },
                  "ref": null,
                  "rendered": "G",
                  "type": "span",
                },
                "ames",
              ],
              "type": "h1",
            },
          ],
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <Connect(SearchInput) />,
            "className": "login-search-form",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {},
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
